--- a/css/index.css
+++ b/css/index.css
@@ -223,17 +223,19 @@ body {
       "Lucida Sans", Arial, sans-serif;
     background-image: url(../assets/1340.jpg);
     background-size: cover;
-    /* backdrop-filter: blur(10px) saturate(1.5); */
+    /*  */
     background-repeat: no-repeat;
   }
   button {
+    font-size: 20px;
     padding: 7px;
-    color: white;
-    background-color: rgb(13, 200, 233);
-    color: white;
+    color: rgb(255, 255, 255);
+    background: none;
     border: none;
-    border-radius: 5px;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 18px;
     cursor: pointer;
+    backdrop-filter: blur(10px) saturate(1);
     /* animation: change 2000ms forwards infinite; */
   }
   .search {
@@ -242,12 +244,16 @@ body {
     gap: 1.5em;
   }
   input {
+    color: rgb(0, 0, 0);
     padding-right: 20px;
     padding-left: 10px;
     line-height: 2em;
     border: none;
+    border: 1px solid #ffffff;
     border-radius: 20px;
     /* animation: change 2000ms forwards infinite; */
+    backdrop-filter: blur(5px) saturate(1);
+    background-color: white;
   }
   .txt {
     font-size: 40px;
