--- a/css/index.css
+++ b/css/index.css
@@ -229,13 +229,13 @@ body {
   button {
     font-size: 20px;
     padding: 7px;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     background: none;
     border: none;
     border: 1px solid rgb(255, 255, 255);
+    background-color: rgb(11, 180, 166);
     border-radius: 18px;
     cursor: pointer;
-    backdrop-filter: blur(10px) saturate(1);
     /* animation: change 2000ms forwards infinite; */
   }
   .search {
